--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/main.css" />
     <title>footer c</title>
   </head>
@@ -11,7 +17,7 @@
       <div class="left-section">
         <div class="left-section-container">
           <div class="logo">
-            <img src="images//chess-knight-svgrepo-com.svg" alt="logo" />
+            <img src="images/knight-chess-piece-svgrepo-com .svg" alt="logo" />
           </div>
           <h3>
             <span style="display: block">Add Your text Heading </span> Text Here
@@ -19,12 +25,33 @@
           <p class="text-title">Click edit button to change this text.</p>
           <p class="text">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum,
-            dolores rerum. Provident enim odit sapiente nemo! Adipisci
-            cupiditate beatae optio ipsum voluptate nemo! Adipisci
+            dolores rerum. Provident enim odit sapiente
           </p>
         </div>
       </div>
-      <div class="right-section"></div>
+      <div class="right-section">
+        <div class="header">
+          <div class="section1">
+            <h3>Follow us</h3>
+            <h3>Subscribe</h3>
+          </div>
+          <div class="section2">
+            <div class="svg">
+              <img src="images/icons8-f-20.png" alt="" />
+              <img src="images/icons8-twitter-20.png" alt="" />
+              <img src="images/icons8-google-20.png" alt="" />
+              <img src="images/icons8-instagram-20.png" alt="" />
+            </div>
+            <div class="email">
+              <input type="text" placeholder="Email" />
+            </div>
+            <button>
+              <img src="images/icons8-telegram-app-48.png" alt="" />
+            </button>
+          </div>
+          <div class="border">&nbsp;</div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
