finished right section

--- a/index.html
+++ b/index.html
@@ -45,11 +45,36 @@
             <div class="email">
               <input type="text" placeholder="Email" />
             </div>
-            <button>
+            <button id="email-btn">
               <img src="images/icons8-telegram-app-48.png" alt="" />
             </button>
           </div>
           <div class="border">&nbsp;</div>
+        </div>
+        <div class="footer">
+          <div class="about">
+            <h3>About</h3>
+            <p>Services</p>
+            <p>Join Now</p>
+            <p>The Team</p>
+            <p>Home Page</p>
+          </div>
+          <div class="service">
+            <h3>Service</h3>
+            <p>Our History</p>
+            <p>Financial Services</p>
+            <p>Employers Liability</p>
+            <p>Insurance</p>
+          </div>
+          <div class="contact">
+            <h3>Contact</h3>
+            <p><span>4188 Edington Drive</span> <span>Smyma,GA 3008</span></p>
+            <p>678-805-1596</p>
+            <p>Kristie@Lawyer.Com</p>
+          </div>
+        </div>
+        <div class="call-to-action">
+          <button class="footer-btn">Click here</button>
         </div>
       </div>
     </div>
